Wrote first section about myself

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">About Myself</a></li>
+							<li class="active"><a href="index.html">About</a></li>
 							<li><a href="generic.html">Classes Taken</a></li>
 							<li><a href="elements.html">Projects</a></li>
 						</ul>
@@ -44,20 +44,15 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<Intro class="About">
 								<header class="major">
-									<span class="date">Contact: tkim0929@g.ucla.edu <br> 818-903-4374 </span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Contact: <br> tkim0929@g.ucla.edu <br> 818-903-4374 </span>
+									<h3>About</h3>
+									<p>I am a computer science major seeking a position in data management / software development. I'm <br>
+									University of California, Los Angeles class of 2023 B.S. in Computer Science. My primary interest <br>
+								would be an internship/entry level job that will increase my experience. </p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
-							</article>
+							</Intro>
 
 						<!-- Posts -->
 							<section class="posts">
