Completed my introduction

--- a/index.html
+++ b/index.html
@@ -42,159 +42,90 @@
 
 				<!-- Main -->
 					<div id="main">
+						<div class="row section-intro">
+         			<div class="col-twelve">
 
-						<!-- Featured Post -->
-							<Intro class="About">
-								<header class="major">
-									<span class="date">Contact: <br> tkim0929@g.ucla.edu <br> 818-903-4374 </span>
-									<h3>About</h3>
-									<p>I am a computer science major seeking a position in data management / software development. I'm <br>
-									University of California, Los Angeles class of 2023 B.S. in Computer Science. My primary interest <br>
-								would be an internship/entry level job that will increase my experience. </p>
-								</header>
-							</Intro>
+            			<h5>About</h5>
+            			<h1>My Introdution</h1>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
+            			<div class="intro-info">
+               			<p class="lead"> I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
+            			</div>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+         			</div>
+						</div> <!-- /section-intro -->
 
-					</div>
+      <div class="row about-content">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+         <div class="col-six tab-full">
+
+            <h3>Profile</h3>
+            <p> I am currently a full-time student but I am open to opportunities in software development/database management. If I am potential fit, please contact via <a href="mailto:tkim0929@g.ucla.edu">tkim0929@g.ucla.edu</a>.</p>
+
+            <ul class="info-list">
+               <li>
+                  <strong>Fullname:</strong>
+                  <span>Taekgon Kim</span>
+               </li>
+               <li>
+                  <strong>Birth Date:</strong>
+                  <span>September 29, 2000</span>
+               </li>
+               <li>
+                  <strong>Email:</strong>
+                  <span>tkim0929@g.ucla.edu</span>
+               </li>
+
+            </ul> <!-- /info-list -->
+
+         </div>
+
+         <div class="col-six tab-full">
+
+            <h3>Skills</h3>
+            <p>I am an strong teamplayer with the ability to bring the team's vision to life in terms of code. My strengths in code are highlighted below: </p>
+
+            <ul class="skill-bars">
+               <li>
+                  <div class="progress percent90"><span>90%</span></div>
+                  <strong>C/C++</strong>
+               </li>
+               <li>
+                  <div class="progress percent90"><span>90%</span></div>
+                  <strong>Python</strong>
+               </li>
+               <li>
+                  <div class="progress percent90"><span>90%</span></div>
+                  <strong>Java</strong>
+               </li>
+               <li>
+                  <div class="progress percent60"><span>60%</span></div>
+                  <strong>MongoDB/SQL</strong>
+               </li>
+
+            </ul> <!-- /skill-bars -->
+         </div>
+
+      </div>
+<!--
+      <div class="row button-section">
+         <div class="col-twelve">
+            <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+            <a href="files/resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
+         </div>
+      </div>
+
+		-->
+</div>
+
 
 				<!-- Copyright -->
+
+
+
+
+
+
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
