--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/layout.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -45,15 +46,13 @@
 						<div class="row section-intro">
          			<div class="col-twelve">
 
-            			<h5>About</h5>
-            			<h1>My Introdution</h1>
-
+            			<h3>About</h3>
             			<div class="intro-info">
                			<p class="lead"> I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
             			</div>
-
          			</div>
-						</div> <!-- /section-intro -->
+						</div>
+						<!-- /section-intro -->
 
       <div class="row about-content">
 
@@ -117,19 +116,10 @@
 
 		-->
 </div>
-
-
 				<!-- Copyright -->
-
-
-
-
-
-
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
