--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="css/layout.css">
+		<link rel="stylesheet" href="assets/css/layout.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -20,7 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Taekgon Kim</h1>
+						<h1>Taekgon D Kim</h1>
 						<p>An Undergraduate 4th Year Computer Science Student at UCLA</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
