--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/layout.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -42,80 +41,13 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="row section-intro">
-         			<div class="col-twelve">
+				<div id="main">
+					<header class="major">
+						<h3>Let me introduce myself</h3>
+						<p>I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
+					</header>
+				</div>
 
-            			<h3>About</h3>
-            			<div class="intro-info">
-               			<p class="lead"> I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
-            			</div>
-         			</div>
-						</div>
-						<!-- /section-intro -->
-
-      <div class="row about-content">
-
-         <div class="col-six tab-full">
-
-            <h3>Profile</h3>
-            <p> I am currently a full-time student but I am open to opportunities in software development/database management. If I am potential fit, please contact via <a href="mailto:tkim0929@g.ucla.edu">tkim0929@g.ucla.edu</a>.</p>
-
-            <ul class="info-list">
-               <li>
-                  <strong>Fullname:</strong>
-                  <span>Taekgon Kim</span>
-               </li>
-               <li>
-                  <strong>Birth Date:</strong>
-                  <span>September 29, 2000</span>
-               </li>
-               <li>
-                  <strong>Email:</strong>
-                  <span>tkim0929@g.ucla.edu</span>
-               </li>
-
-            </ul> <!-- /info-list -->
-
-         </div>
-
-         <div class="col-six tab-full">
-
-            <h3>Skills</h3>
-            <p>I am an strong teamplayer with the ability to bring the team's vision to life in terms of code. My strengths in code are highlighted below: </p>
-
-            <ul class="skill-bars">
-               <li>
-                  <div class="progress percent90"><span>90%</span></div>
-                  <strong>C/C++</strong>
-               </li>
-               <li>
-                  <div class="progress percent90"><span>90%</span></div>
-                  <strong>Python</strong>
-               </li>
-               <li>
-                  <div class="progress percent90"><span>90%</span></div>
-                  <strong>Java</strong>
-               </li>
-               <li>
-                  <div class="progress percent60"><span>60%</span></div>
-                  <strong>MongoDB/SQL</strong>
-               </li>
-
-            </ul> <!-- /skill-bars -->
-         </div>
-
-      </div>
-<!--
-      <div class="row button-section">
-         <div class="col-twelve">
-            <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-            <a href="files/resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
-         </div>
-      </div>
-
-		-->
-</div>
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
