--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
 						<h3>Let me introduce myself</h3>
 						<p>I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
 					</header>
+
+					<h2>Profile</h2>
+
+					<h3>Default</h3>
+					<div class="table-wrapper">
+						<table>
+							<tbody>
+								<tr>
+									<td><strong>FullName:</strong></td>
+									<td>Taekgon Kim</td>
+								</tr>
+								<tr>
+									<td>Birth Date:</td>
+									<td>September 29, 2000</td>
+									<td>19.99</td>
+								</tr>
+								<tr>
+									<td>Item 3</td>
+									<td> Morbi faucibus arcu accumsan lorem.</td>
+									<td>29.99</td>
+								</tr>
+								<tr>
+									<td>Item 4</td>
+									<td>Vitae integer tempus condimentum.</td>
+									<td>19.99</td>
+								</tr>
+								<tr>
+									<td>Item 5</td>
+									<td>Ante turpis integer aliquet porttitor.</td>
+									<td>29.99</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 
 				<!-- Copyright -->
