--- a/index.html
+++ b/index.html
@@ -47,39 +47,42 @@
 						<p>I am an Undergraduate student seeking a position in software development / database management. I will be obtaining a B.S. in Computer science on June 2023 at University of California, Los Angeles. My primary interest would be an internship/entry level job that will increase my experience in the field. </p>
 					</header>
 
-					<h2>Profile</h2>
-
-					<h3>Default</h3>
+					<h3>Profile</h3>
+					<p> I am currently a full-time student but I am open to opportunities in software development/database management. If I am potential fit, please contact via <a href="mailto:tkim0929@g.ucla.edu">tkim0929@g.ucla.edu</a>.</p>
 					<div class="table-wrapper">
 						<table>
 							<tbody>
 								<tr>
-									<td><strong>FullName:</strong></td>
+									<td><strong>Full Name:</strong></td>
 									<td>Taekgon Kim</td>
 								</tr>
 								<tr>
-									<td>Birth Date:</td>
+									<td><strong>Birth Date: </strong></td>
 									<td>September 29, 2000</td>
-									<td>19.99</td>
 								</tr>
 								<tr>
-									<td>Item 3</td>
-									<td> Morbi faucibus arcu accumsan lorem.</td>
-									<td>29.99</td>
-								</tr>
-								<tr>
-									<td>Item 4</td>
-									<td>Vitae integer tempus condimentum.</td>
-									<td>19.99</td>
-								</tr>
-								<tr>
-									<td>Item 5</td>
-									<td>Ante turpis integer aliquet porttitor.</td>
-									<td>29.99</td>
+									<td><strong>Email: </strong></td>
+									<td> tkim0929@g.ucla.edu </td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
+
+				<h3> Skills </h3>
+				<p> I am a strong teamplayer with the ability to put the team's vision into life in terms of code. There are my strengths in code:
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th>Language</th>
+								<th>Proficiency</th>
+							</tr>
+						</thead>
+						<tbody>
+							<td><strong>C/C++</strong></td>
+							<td>90%</td>
+						</tbody>
+					</table>
 				</div>
 
 				<!-- Copyright -->
